Updates from Overleaf

--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -1,33 +1,73 @@
-@Manual{R-archive,
-  title = {archive: Multi-Format Archive and Compression Support},
-  author = {Jim Hester and Gábor Csárdi},
+@Manual{R-bit,
+  title = {bit: Classes and Methods for Fast Memory-Efficient Boolean Selections},
+  author = {Michael Chirico and Jens Oehlschlägel},
   year = {2025},
-  note = {R package version 1.1.12},
-  url = {https://archive.r-lib.org/},
+  note = {R package version 4.6.0},
+  url = {https://github.com/r-lib/bit},
 }
 
-@Manual{R-bib2df,
-  title = {bib2df: Parse a BibTeX File to a Data Frame},
-  author = {Philipp Ottolinger},
+@Manual{R-bit64,
+  title = {bit64: A S3 Class for Vectors of 64bit Integers},
+  author = {Michael Chirico and Jens Oehlschlägel},
+  year = {2025},
+  note = {R package version 4.6.0-1},
+  url = {https://github.com/r-lib/bit64},
+}
+
+@Manual{R-brio,
+  title = {brio: Basic R Input Output},
+  author = {Jim Hester and Gábor Csárdi},
   year = {2024},
-  note = {R package version 1.1.2.0},
-  url = {https://docs.ropensci.org/bib2df/},
+  note = {R package version 1.1.5},
+  url = {https://brio.r-lib.org},
 }
 
-@Manual{R-csvwr,
-  title = {csvwr: Read and Write CSV on the Web (CSVW) Tables and Metadata},
-  author = {Robin Gower},
-  year = {2022},
-  note = {R package version 0.1.7},
-  url = {https://robsteranium.github.io/csvwr/},
+@Manual{R-callr,
+  title = {callr: Call R from R},
+  author = {Gábor Csárdi and Winston Chang},
+  year = {2024},
+  note = {R package version 3.7.6},
+  url = {https://callr.r-lib.org},
 }
 
-@Manual{R-devtools,
-  title = {devtools: Tools to Make Developing R Packages Easier},
-  author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
+@Manual{R-cli,
+  title = {cli: Helpers for Developing Command Line Interfaces},
+  author = {Gábor Csárdi},
+  year = {2025},
+  note = {R package version 3.6.5},
+  url = {https://cli.r-lib.org},
+}
+
+@Manual{R-clipr,
+  title = {clipr: Read and Write from the System Clipboard},
+  author = {Matthew Lincoln},
   year = {2022},
-  note = {R package version 2.4.5},
-  url = {https://devtools.r-lib.org/},
+  note = {R package version 0.8.0},
+  url = {https://github.com/mdlincoln/clipr},
+}
+
+@Manual{R-crayon,
+  title = {crayon: Colored Terminal Output},
+  author = {Gábor Csárdi},
+  year = {2024},
+  note = {R package version 1.5.3},
+  url = {https://r-lib.github.io/crayon/},
+}
+
+@Manual{R-desc,
+  title = {desc: Manipulate DESCRIPTION Files},
+  author = {Gábor Csárdi and Kirill Müller and Jim Hester},
+  year = {2023},
+  note = {R package version 1.4.3},
+  url = {https://desc.r-lib.org/},
+}
+
+@Manual{R-diffobj,
+  title = {diffobj: Diffs for R Objects},
+  author = {Brodie Gaslam},
+  year = {2025},
+  note = {R package version 0.3.6},
+  url = {https://github.com/brodieG/diffobj},
 }
 
 @Manual{R-dplyr,
@@ -38,11 +78,53 @@
   url = {https://dplyr.tidyverse.org},
 }
 
+@Manual{R-evaluate,
+  title = {evaluate: Parsing and Evaluation Tools that Provide More Details than the
+Default},
+  author = {Hadley Wickham and Yihui Xie},
+  year = {2025},
+  note = {R package version 1.0.5},
+  url = {https://evaluate.r-lib.org/},
+}
+
+@Manual{R-farver,
+  title = {farver: High Performance Colour Space Manipulation},
+  author = {Thomas Lin Pedersen and Berendea Nicolae and Romain François},
+  year = {2024},
+  note = {R package version 2.1.2},
+  url = {https://farver.data-imaginist.com},
+}
+
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.0.0},
+  url = {https://forcats.tidyverse.org/},
+}
+
+@Manual{R-fs,
+  title = {fs: Cross-Platform File System Operations Based on libuv},
+  author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
+  year = {2025},
+  note = {R package version 1.6.6},
+  url = {https://fs.r-lib.org},
+}
+
+@Manual{R-generics,
+  title = {generics: Common S3 Generics not Provided by Base R Methods Related to
+Model Fitting},
+  author = {Hadley Wickham and Max Kuhn and Davis Vaughan},
+  year = {2025},
+  note = {R package version 0.1.4},
+  url = {https://generics.r-lib.org},
+}
+
 @Manual{R-GGally,
   title = {GGally: Extension to ggplot2},
   author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
-  year = {2024},
-  note = {R package version 2.2.1},
+  year = {2025},
+  note = {R package version 2.3.0},
   url = {https://ggobi.github.io/ggally/},
 }
 
@@ -50,31 +132,98 @@
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington and Teun {van den Brand}},
   year = {2025},
-  note = {R package version 3.5.2},
+  note = {R package version 4.0.1},
   url = {https://ggplot2.tidyverse.org},
 }
 
-@Manual{R-ggpubr,
-  title = {ggpubr: ggplot2 Based Publication Ready Plots},
-  author = {Alboukadel Kassambara},
-  year = {2023},
-  note = {R package version 0.6.0},
-  url = {https://rpkgs.datanovia.com/ggpubr/},
+@Manual{R-ggstats,
+  title = {ggstats: Extension to ggplot2 for Plotting Stats},
+  author = {Joseph Larmarange},
+  year = {2025},
+  note = {R package version 0.11.0},
+  url = {https://larmarange.github.io/ggstats/},
 }
 
-@Manual{R-logger,
-  title = {logger: A Lightweight, Modern and Flexible Logging Utility},
-  author = {Gergely Daróczi and Hadley Wickham},
+@Manual{R-glue,
+  title = {glue: Interpreted String Literals},
+  author = {Jim Hester and Jennifer Bryan},
   year = {2024},
-  note = {R package version 0.4.0},
-  url = {https://daroczig.github.io/logger/},
+  note = {R package version 1.8.0},
+  url = {https://glue.tidyverse.org/},
+}
+
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
+  doi = {10.32614/CRAN.package.gridExtra},
+}
+
+@Manual{R-gtable,
+  title = {gtable: Arrange Grobs in Tables},
+  author = {Hadley Wickham and Thomas Lin Pedersen},
+  year = {2024},
+  note = {R package version 0.3.6},
+  url = {https://gtable.r-lib.org},
+}
+
+@Manual{R-hms,
+  title = {hms: Pretty Time of Day},
+  author = {Kirill Müller},
+  year = {2023},
+  note = {R package version 1.1.3},
+  url = {https://hms.tidyverse.org/},
+}
+
+@Manual{R-isoband,
+  title = {isoband: Generate Isolines and Isobands from Regularly Spaced Elevation
+Grids},
+  author = {Hadley Wickham and Claus O. Wilke and Thomas Lin Pedersen},
+  year = {2025},
+  note = {R package version 0.3.0},
+  url = {https://isoband.r-lib.org},
+}
+
+@Manual{R-jsonlite,
+  title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
+  author = {Jeroen Ooms},
+  year = {2025},
+  note = {R package version 2.0.0},
+  url = {https://jeroen.r-universe.dev/jsonlite},
+}
+
+@Manual{R-labeling,
+  title = {labeling: Axis Labeling},
+  author = {Justin Talbot},
+  year = {2023},
+  note = {R package version 0.4.3},
+  url = {https://CRAN.R-project.org/package=labeling},
+  doi = {10.32614/CRAN.package.labeling},
+}
+
+@Manual{R-lattice,
+  title = {lattice: Trellis Graphics for R},
+  author = {Deepayan Sarkar},
+  year = {2025},
+  note = {R package version 0.22-7},
+  url = {https://lattice.r-forge.r-project.org/},
+}
+
+@Manual{R-lifecycle,
+  title = {lifecycle: Manage the Life Cycle of your Package Functions},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.0.4},
+  url = {https://lifecycle.r-lib.org/},
 }
 
 @Manual{R-magrittr,
   title = {magrittr: A Forward-Pipe Operator for R},
   author = {Stefan Milton Bache and Hadley Wickham},
-  year = {2022},
-  note = {R package version 2.0.3},
+  year = {2025},
+  note = {R package version 2.0.4},
   url = {https://magrittr.tidyverse.org},
 }
 
@@ -95,12 +244,44 @@
   url = {https://github.com/adeckmyn/maps},
 }
 
-@Manual{R-MASS,
-  title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
-  author = {Brian Ripley and Bill Venables},
+@Manual{R-patchwork,
+  title = {patchwork: The Composer of Plots},
+  author = {Thomas Lin Pedersen},
   year = {2025},
-  note = {R package version 7.3-65},
-  url = {http://www.stats.ox.ac.uk/pub/MASS4/},
+  note = {R package version 1.3.2},
+  url = {https://patchwork.data-imaginist.com},
+}
+
+@Manual{R-pillar,
+  title = {pillar: Coloured Formatting for Columns},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2025},
+  note = {R package version 1.11.1},
+  url = {https://pillar.r-lib.org/},
+}
+
+@Manual{R-pkgbuild,
+  title = {pkgbuild: Find Tools Needed to Build R Packages},
+  author = {Hadley Wickham and Jim Hester and Gábor Csárdi},
+  year = {2025},
+  note = {R package version 1.4.8},
+  url = {https://github.com/r-lib/pkgbuild},
+}
+
+@Manual{R-pkgconfig,
+  title = {pkgconfig: Private Configuration for R Packages},
+  author = {Gábor Csárdi},
+  year = {2019},
+  note = {R package version 2.0.3},
+  url = {https://github.com/r-lib/pkgconfig#readme},
+}
+
+@Manual{R-pkgload,
+  title = {pkgload: Simulate Package Installation and Attach},
+  author = {Hadley Wickham and Winston Chang and Jim Hester and Lionel Henry},
+  year = {2025},
+  note = {R package version 1.4.1},
+  url = {https://github.com/r-lib/pkgload},
 }
 
 @Manual{R-plyr,
@@ -111,6 +292,46 @@
   url = {http://had.co.nz/plyr},
 }
 
+@Manual{R-praise,
+  title = {praise: Praise Users},
+  author = {Gabor Csardi and Sindre Sorhus},
+  year = {2015},
+  note = {R package version 1.0.0},
+  url = {https://github.com/gaborcsardi/praise},
+}
+
+@Manual{R-prettyunits,
+  title = {prettyunits: Pretty, Human Readable Formatting of Quantities},
+  author = {Gabor Csardi},
+  year = {2023},
+  note = {R package version 1.2.0},
+  url = {https://github.com/r-lib/prettyunits},
+}
+
+@Manual{R-processx,
+  title = {processx: Execute and Control System Processes},
+  author = {Gábor Csárdi and Winston Chang},
+  year = {2025},
+  note = {R package version 3.8.6},
+  url = {https://processx.r-lib.org},
+}
+
+@Manual{R-progress,
+  title = {progress: Terminal Progress Bars},
+  author = {Gábor Csárdi and Rich FitzJohn},
+  year = {2023},
+  note = {R package version 1.2.3},
+  url = {https://github.com/r-lib/progress#readme},
+}
+
+@Manual{R-ps,
+  title = {ps: List, Query, Manipulate System Processes},
+  author = {Jay Loden and Dave Daeschler and Giampaolo Rodola' and Gábor Csárdi},
+  year = {2025},
+  note = {R package version 1.9.1},
+  url = {https://github.com/r-lib/ps},
+}
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Hadley Wickham and Lionel Henry},
@@ -119,20 +340,36 @@
   url = {https://purrr.tidyverse.org/},
 }
 
-@Manual{R-randomcoloR,
-  title = {randomcoloR: Generate Attractive Random Colors},
-  author = {Ron Ammar},
-  year = {2019},
-  note = {R package version 1.1.0.1},
-  url = {https://CRAN.R-project.org/package=randomcoloR},
-  doi = {10.32614/CRAN.package.randomcoloR},
+@Manual{R-R6,
+  title = {R6: Encapsulated Classes with Reference Semantics},
+  author = {Winston Chang},
+  year = {2025},
+  note = {R package version 2.6.1},
+  url = {https://r6.r-lib.org},
+}
+
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2022},
+  note = {R package version 1.1-3},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+  doi = {10.32614/CRAN.package.RColorBrewer},
+}
+
+@Manual{R-Rcpp,
+  title = {Rcpp: Seamless R and C++ Integration},
+  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Iñaki Ucar and Doug Bates and John Chambers},
+  year = {2025},
+  note = {R package version 1.1.0},
+  url = {https://www.rcpp.org},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2024},
-  note = {R package version 2.1.5},
+  year = {2025},
+  note = {R package version 2.1.6},
   url = {https://readr.tidyverse.org},
 }
 
@@ -144,13 +381,45 @@
   url = {https://github.com/hadley/reshape},
 }
 
-@Manual{R-Rtsne,
-  title = {Rtsne: T-Distributed Stochastic Neighbor Embedding using a Barnes-Hut
-Implementation},
-  author = {Jesse Krijthe},
-  year = {2023},
-  note = {R package version 0.17},
-  url = {https://github.com/jkrijthe/Rtsne},
+@Manual{R-rlang,
+  title = {rlang: Functions for Base Types and Core R and Tidyverse Features},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2025},
+  note = {R package version 1.1.6},
+  url = {https://rlang.r-lib.org},
+}
+
+@Manual{R-rprojroot,
+  title = {rprojroot: Finding Files in Project Subdirectories},
+  author = {Kirill Müller},
+  year = {2025},
+  note = {R package version 2.1.1},
+  url = {https://rprojroot.r-lib.org/},
+}
+
+@Manual{R-S7,
+  title = {S7: An Object Oriented System Meant to Become a Successor to S3 and
+S4},
+  author = {Davis Vaughan and Jim Hester and Tomasz Kalinowski and Will Landau and Michael Lawrence and Martin Maechler and Luke Tierney and Hadley Wickham},
+  year = {2025},
+  note = {R package version 0.2.1},
+  url = {https://rconsortium.github.io/S7/},
+}
+
+@Manual{R-scales,
+  title = {scales: Scale Functions for Visualization},
+  author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
+  year = {2025},
+  note = {R package version 1.4.0},
+  url = {https://scales.r-lib.org},
+}
+
+@Manual{R-stringi,
+  title = {stringi: Fast and Portable Character String Processing Facilities},
+  author = {Marek Gagolewski},
+  year = {2025},
+  note = {R package version 1.8.7},
+  url = {https://stringi.gagolewski.com/},
 }
 
 @Manual{R-stringr,
@@ -159,6 +428,14 @@ Implementation},
   year = {2023},
   note = {R package version 1.5.1},
   url = {https://stringr.tidyverse.org},
+}
+
+@Manual{R-testthat,
+  title = {testthat: Unit Testing for R},
+  author = {Hadley Wickham},
+  year = {2025},
+  note = {R package version 3.2.3},
+  url = {https://testthat.r-lib.org},
 }
 
 @Manual{R-tibble,
@@ -177,6 +454,22 @@ Implementation},
   url = {https://tidyr.tidyverse.org},
 }
 
+@Manual{R-tidyselect,
+  title = {tidyselect: Select from a Set of Strings},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2024},
+  note = {R package version 1.2.1},
+  url = {https://tidyselect.r-lib.org},
+}
+
+@Manual{R-tzdb,
+  title = {tzdb: Time Zone Database Information},
+  author = {Davis Vaughan},
+  year = {2025},
+  note = {R package version 0.5.0},
+  url = {https://tzdb.r-lib.org},
+}
+
 @Manual{R-udpipe,
   title = {udpipe: Tokenization, Parts of Speech Tagging, Lemmatization and
 Dependency Parsing with the UDPipe 'NLP' Toolkit},
@@ -186,12 +479,12 @@ Dependency Parsing with the UDPipe 'NLP' Toolkit},
   url = {https://bnosac.github.io/udpipe/en/index.html},
 }
 
-@Manual{R-urltools,
-  title = {urltools: Vectorised Tools for URL Handling and Parsing},
-  author = {Os Keyes and Jay Jacobs and Drew Schmidt and Mark Greenaway and Bob Rudis and Alex Pinto and Maryam Khezrzadeh and Peter Meilstrup and Adam M. Costello and Jeff Bezanson and Peter Meilstrup and Xueyuan Jiang},
-  year = {2019},
-  note = {R package version 1.7.3},
-  url = {https://github.com/Ironholds/urltools/},
+@Manual{R-vctrs,
+  title = {vctrs: Vector Helpers},
+  author = {Hadley Wickham and Lionel Henry and Davis Vaughan},
+  year = {2023},
+  note = {R package version 0.6.5},
+  url = {https://vctrs.r-lib.org/},
 }
 
 @Manual{R-viridis,
@@ -200,6 +493,46 @@ Dependency Parsing with the UDPipe 'NLP' Toolkit},
   year = {2024},
   note = {R package version 0.6.5},
   url = {https://sjmgarnier.github.io/viridis/},
+}
+
+@Manual{R-viridisLite,
+  title = {viridisLite: Colorblind-Friendly Color Maps (Lite Version)},
+  author = {Simon Garnier},
+  year = {2023},
+  note = {R package version 0.4.2},
+  url = {https://sjmgarnier.github.io/viridisLite/},
+}
+
+@Manual{R-vroom,
+  title = {vroom: Read and Write Rectangular Text Data Quickly},
+  author = {Jim Hester and Hadley Wickham and Jennifer Bryan},
+  year = {2023},
+  note = {R package version 1.6.5},
+  url = {https://vroom.r-lib.org},
+}
+
+@Manual{R-waldo,
+  title = {waldo: Find Differences Between R Objects},
+  author = {Hadley Wickham},
+  year = {2025},
+  note = {R package version 0.6.2},
+  url = {https://waldo.r-lib.org},
+}
+
+@Manual{R-withr,
+  title = {withr: Run Code With Temporarily Modified Global State},
+  author = {Jim Hester and Lionel Henry and Kirill Müller and Kevin Ushey and Hadley Wickham and Winston Chang},
+  year = {2024},
+  note = {R package version 3.0.2},
+  url = {https://withr.r-lib.org},
+}
+
+@Manual{R-zip,
+  title = {zip: Cross-Platform zip Compression},
+  author = {Gábor Csárdi},
+  year = {2025},
+  note = {R package version 2.3.3},
+  url = {https://github.com/r-lib/zip},
 }
 
 @Book{ggplot22016,
@@ -211,15 +544,22 @@ Dependency Parsing with the UDPipe 'NLP' Toolkit},
   url = {https://ggplot2.tidyverse.org},
 }
 
-@Book{MASS2002,
-  title = {Modern Applied Statistics with S},
-  author = {W. N. Venables and B. D. Ripley},
+@Article{jsonlite2014,
+  title = {The jsonlite Package: A Practical and Consistent Mapping Between JSON Data and R Objects},
+  author = {Jeroen Ooms},
+  journal = {arXiv:1403.2805 [stat.CO]},
+  year = {2014},
+  url = {https://arxiv.org/abs/1403.2805},
+}
+
+@Book{lattice2008,
+  title = {Lattice: Multivariate Data Visualization with R},
+  author = {Deepayan Sarkar},
+  year = {2008},
   publisher = {Springer},
-  edition = {Fourth},
   address = {New York},
-  year = {2002},
-  note = {ISBN 0-387-95457-0},
-  url = {https://www.stats.ox.ac.uk/pub/MASS4/},
+  isbn = {978-0-387-75968-5},
+  url = {http://lmdvr.r-forge.r-project.org},
 }
 
 @Article{plyr2011,
@@ -233,6 +573,38 @@ Dependency Parsing with the UDPipe 'NLP' Toolkit},
   url = {https://www.jstatsoft.org/v40/i01/},
 }
 
+@Article{Rcpp2011,
+  title = {{Rcpp}: Seamless {R} and {C++} Integration},
+  author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {8},
+  pages = {1--18},
+  doi = {10.18637/jss.v040.i08},
+}
+
+@Book{Rcpp2013,
+  title = {Seamless {R} and {C++} Integration with {Rcpp}},
+  author = {Dirk Eddelbuettel},
+  publisher = {Springer},
+  address = {New York},
+  year = {2013},
+  note = {ISBN 978-1-4614-6867-7},
+  doi = {10.1007/978-1-4614-6868-4},
+}
+
+@Article{Rcpp2018,
+  title = {{Extending {R} with {C++}: A Brief Introduction to {Rcpp}}},
+  author = {Dirk Eddelbuettel and James Joseph Balamuta},
+  journal = {The American Statistician},
+  year = {2018},
+  volume = {72},
+  number = {1},
+  pages = {28-36},
+  doi = {10.1080/00031305.2017.1375990},
+}
+
 @Article{reshape22007,
   title = {Reshaping Data with the {reshape} Package},
   author = {Hadley Wickham},
@@ -244,22 +616,25 @@ Dependency Parsing with the UDPipe 'NLP' Toolkit},
   url = {http://www.jstatsoft.org/v21/i12/},
 }
 
-@Article{Rtsne2008,
-  title = {Visualizing High-Dimensional Data Using t-SNE},
-  volume = {9},
-  pages = {2579-2605},
-  year = {2008},
-  author = {L.J.P. {van der Maaten} and G.E. Hinton},
-  journal = {Journal of Machine Learning Research},
+@Article{stringi2022,
+  title = {{stringi}: {F}ast and portable character string processing in {R}},
+  author = {Marek Gagolewski},
+  journal = {Journal of Statistical Software},
+  year = {2022},
+  volume = {103},
+  number = {2},
+  pages = {1--59},
+  doi = {10.18637/jss.v103.i02},
 }
 
-@Article{Rtsne2014,
-  title = {Accelerating t-SNE using Tree-Based Algorithms},
-  volume = {15},
-  pages = {3221-3245},
-  year = {2014},
-  author = {L.J.P. {van der Maaten}},
-  journal = {Journal of Machine Learning Research},
+@Article{testthat2011,
+  author = {Hadley Wickham},
+  title = {testthat: Get Started with Testing},
+  journal = {The R Journal},
+  year = {2011},
+  volume = {3},
+  pages = {5--10},
+  url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
 }
 
 @Manual{viridis2024,
@@ -271,12 +646,21 @@ Dependency Parsing with the UDPipe 'NLP' Toolkit},
   doi = {10.5281/zenodo.4679423},
 }
 
-@Manual{R_4.5.1,
+@Manual{viridisLite2023,
+  title = {{viridis(Lite)} - Colorblind-Friendly Color Maps for R},
+  author = {{Garnier} and {Simon} and {Ross} and {Noam} and {Rudis} and {Robert} and {Camargo} and Antônio Pedro and {Sciaini} and {Marco} and {Scherer} and {Cédric}},
+  year = {2023},
+  note = {viridisLite package version 0.4.2},
+  url = {https://sjmgarnier.github.io/viridis/},
+  doi = {10.5281/zenodo.4678327},
+}
+
+@Manual{R_4.5.2,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
   year = {2025},
   url = {https://www.R-project.org/},
-  note = {R version 4.5.1 (2025-06-13)},
+  note = {R version 4.5.2 (2025-10-31)},
 }
