--- a/latex/used_packages_table.tex
+++ b/latex/used_packages_table.tex
@@ -1,34 +1,75 @@
-% latex table generated in R 4.5.1 by xtable 1.8-4 package
-% Fri Jul 11 17:01:19 2025
+% latex table generated in R 4.5.2 by xtable 1.8-4 package
+% Fri Dec 19 11:07:04 2025
 \begin{longtable}{p{2.5cm}p{2.5cm}}
   \toprule
 Package & Version \\ 
   \midrule
-readr & 2.1.5 \\ 
-  dplyr & 1.1.4 \\ 
+R6 & 2.6.1 \\ 
+  RColorBrewer & 1.1-3 \\ 
+  Rcpp & 1.1.0 \\ 
+  S7 & 0.2.1 \\ 
+  bit & 4.6.0 \\ 
+  brio & 1.1.5 \\ 
+  cli & 3.6.5 \\ 
+  clipr & 0.8.0 \\ 
+  crayon & 1.5.3 \\ 
+  evaluate & 1.0.5 \\ 
+  farver & 2.1.2 \\ 
+  fs & 1.6.6 \\ 
+  generics & 0.1.4 \\ 
+  glue & 1.8.0 \\ 
+  jsonlite & 2.0.0 \\ 
+  labeling & 0.4.3 \\ 
+  lattice & 0.22-7 \\ 
+  magrittr & 2.0.4 \\ 
+  pkgconfig & 2.0.3 \\ 
+  praise & 1.0.0 \\ 
+  prettyunits & 1.2.0 \\ 
+  ps & 1.9.1 \\ 
+  rlang & 1.1.6 \\ 
+  rprojroot & 2.1.1 \\ 
+  stringi & 1.8.7 \\ 
+  tzdb & 0.5.0 \\ 
+  viridisLite & 0.4.2 \\ 
+  withr & 3.0.2 \\ 
+  zip & 2.3.3 \\ 
+  bit64 & 4.6.0-1 \\ 
+  desc & 1.4.3 \\ 
+  diffobj & 0.3.6 \\ 
+  isoband & 0.3.0 \\ 
+  lifecycle & 1.0.4 \\ 
   plyr & 1.8.9 \\ 
-  MASS & 7.3-65 \\ 
-  ggplot2 & 3.5.2 \\ 
-  ggpubr & 0.6.0 \\ 
-  stringr & 1.5.1 \\ 
-  viridis & 0.6.5 \\ 
-  reshape2 & 1.4.4 \\ 
-  tidyr & 1.3.1 \\ 
+  processx & 3.8.6 \\ 
+  callr & 3.7.6 \\ 
+  gtable & 0.3.6 \\ 
+  scales & 1.4.0 \\ 
   udpipe & 0.8.11 \\ 
-  devtools & 2.4.5 \\ 
-  magrittr & 2.0.3 \\ 
-  archive & 1.1.12 \\ 
-  bib2df & 1.1.2.0 \\ 
-  logger & 0.4.0 \\ 
-  csvwr & 0.1.7 \\ 
-  urltools & 1.7.3 \\ 
+  vctrs & 0.6.5 \\ 
+  waldo & 0.6.2 \\ 
+  ggplot2 & 4.0.0 \\ 
+  gridExtra & 2.3 \\ 
+  hms & 1.1.4 \\ 
+  pillar & 1.11.1 \\ 
+  pkgbuild & 1.4.8 \\ 
+  purrr & 1.1.0 \\ 
+  stringr & 1.5.1 \\ 
   tibble & 3.3.0 \\ 
+  tidyselect & 1.2.1 \\ 
+  dplyr & 1.1.4 \\ 
+  forcats & 1.0.1 \\ 
+  patchwork & 1.3.2 \\ 
+  pkgload & 1.4.1 \\ 
+  progress & 1.2.3 \\ 
+  reshape2 & 1.4.4 \\ 
+  viridis & 0.6.5 \\ 
+  vroom & 1.6.6 \\ 
+  readr & 2.1.5 \\ 
+  testthat & 3.2.3 \\ 
+  tidyr & 1.3.1 \\ 
+  ggstats & 0.11.0 \\ 
+  GGally & 2.3.0 \\ 
   maps & 3.4.3 \\ 
   mapproj & 1.2.12 \\ 
-  purrr & 1.1.0 \\ 
-  Rtsne & 0.17 \\ 
-  randomcoloR & 1.1.0.1 \\ 
-  GGally & 2.2.1 \\ 
    \bottomrule
 \caption{Table of R-packages used.} 
 \label{r_package_table}
